# prometheus-diskspin-exporter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  reuse.yml
apparmor.d/: opt.prometheus_diskspin_exporter
docs/: granafa_hdparm.png.license  granafa_transform.png.license  logo.gif.license
integration_tests/: test_curl_localhost.sh
man/: prometheus-diskspin-exporter.1
src/prometheus_diskspin_exporter/: main.py
systemd/: prometheus-diskspin-exporter.service
tests/: test_main.py
