# SPDX-FileCopyrightText: 2024 Agathe Porte
#
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus-diskspin-exporter"
version = "1.1"
requires-python = ">= 3.12"

[project.scripts]
prometheus-diskspin-exporter = "prometheus_diskspin_exporter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prometheus_diskspin_exporter"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]
